# RH6_ros1

./: README.md
RH6/cpp/: ROS1_RUN.md
RH6/cpp/rh6_cmd/: CMakeLists.txt  package.xml
RH6/cpp/rh6_cmd/srv/: Rh6ik.srv
RH6/cpp/rh6_ctrl/: CMakeLists.txt  package.xml
RH6/cpp/rh6_ctrl/include/: can_socket.h  rh6_ctrl.hpp  rh6_test.hpp  ryhandlib_port.h
RH6/cpp/rh6_ctrl/launch/: BothHands.py
RH6/cpp/rh6_ctrl/lib/: ryhandlib.h
RH6/cpp/rh6_ctrl/scripts/: dual_sine_cmd.py
RH6/cpp/rh6_ctrl/src/: can_socket.c  rh6_ctrl.cpp  rh6_kinematics.cpp  rh6_test.cpp  ryhandlib_port.c
RH6/cpp/rh6_ctrl/urdf/: ruihand15z.urdf  ruihand6y.urdf  ruihand6z.urdf
RH6/cpp/rh6_msg/: CMakeLists.txt  package.xml
RH6/cpp/rh6_msg/msg/: Rh6Msg.msg
RH6/py/rh6_can_py/: CMakeLists.txt  package.xml  setup.py
RH6/py/rh6_can_py/rh6_can_py/: __init__.py  can_interface.py  ryhandlib_wrapper.py
RH6/py/rh6_cmd/: CMakeLists.txt  package.xml
RH6/py/rh6_cmd/msg/: Rh6Cmd.msg
RH6/py/rh6_cmd/srv/: Rh6fk.srv
RH6/py/rh6_ctrl_py/: CMakeLists.txt  package.xml
RH6/py/rh6_ctrl_py/launch/: rh6_ctrl_py.launch
RH6/py/rh6_ctrl_py/scripts/: rh6_ctrl_node.py  rh6_test.py
RH6/py/rh6_kin_py/: CMakeLists.txt  package.xml  setup.py
RH6/py/rh6_kin_py/rh6_kin_py/: __init__.py  kinematics.py
RH6/py/rh6_msg/: CMakeLists.txt  package.xml
