<?xml version="1.0"?>
<package format="2">
  <name>rh6_msg</name>
  <version>0.0.1</version>
  <description>ROS1 package with custom message status for rh6</description>

  <maintainer email="1109920475@qq.com">zhang</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Message generation build deps -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Runtime deps for generated messages -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export/>
</package>