<?xml version="1.0"?>
<package format="2">
  <name>rh6_can_py</name>
  <version>0.1.0</version>
  <description>RyHand CAN servo wrapper for ROS1 Python (ctypes + SocketCAN)</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
</package>