<?xml version="1.0"?>
<package format="2">
  <name>rh6_msg</name>
  <version>0.0.1</version>
  <description>RH6 message definitions</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>